[package]
authors = ["hominee <bruceyuan0@protonmail.com>"]
edition = "2018"
readme = "README.md"
name = "no-std"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
crossbus = { path = "../..", features = ["derive"] }
emballoc = "0.1.2"

# this lets you use `cargo fix`!
[[bin]]
name = "no-std"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
