[package]
name = "wasm32"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features=["Document", "Window", "Element", "HtmlInputElement", "HtmlTextAreaElement"] }
crossbus = {path = "../..", features = ["derive", "log"]}
wasm-bindgen-futures = "0.4.34"
log = "0.4.17"
wasm-logger = "0.2.0"
